--- a/frontend/src/components/login/Login.css
+++ b/frontend/src/components/login/Login.css
@@ -1,54 +1,56 @@
 .login {
-  height: calc(100vh - 50px);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background: linear-gradient(
-      rgba(255, 255, 255, 0.5),
-      rgba(255, 255, 255, 0.5)
-    ),
-    url("nature2.jpg");
-  background-size: cover;
+    height: calc(100vh - 50px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient( rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url("nature2.jpg");
+    background-size: cover;
 }
+
 .login-title {
-  font-size: 50px;
+    font-size: 50px;
 }
 
 .login-form {
-  margin-top: 20px;
-  display: flex;
-  flex-direction: column;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
 }
 
-.login-form > label {
-  margin: 10px 0;
+.login-form>label {
+    margin: 10px 0;
 }
 
 .login-input {
-  padding: 10px;
-  background-color: white;
-  border: none;
+    padding: 10px;
+    background-color: white;
+    border: none;
 }
 
 .loginBtn {
-  margin-top: 50px;
-  cursor: pointer;
-  background-color: rgb(158, 56, 56);
-  border: none;
-  color: white;
-  border-radius: 10px;
-  padding: 10px;
+    margin-top: 50px;
+    cursor: pointer;
+    background-color: rgb(158, 56, 56);
+    border: none;
+    color: white;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.loginBtn:disabled {
+    cursor: not-allowed;
+    background-color: rgb(252, 173, 173);
 }
 
 .registerBtn {
-  position: absolute;
-  top: 60px;
-  right: 20px;
-  background-color: teal;
-  cursor: pointer;
-  border: none;
-  padding: 10px;
-  color: white;
-  border-radius: 10px;
+    position: absolute;
+    top: 60px;
+    right: 20px;
+    background-color: teal;
+    cursor: pointer;
+    border: none;
+    padding: 10px;
+    color: white;
+    border-radius: 10px;
 }
