--- a/frontend/src/components/singlePost/SinglePost.css
+++ b/frontend/src/components/singlePost/SinglePost.css
@@ -1,65 +1,105 @@
 .single-post {
-  flex: 9;
+    flex: 9;
 }
 
 .single-post-warpper {
-  padding: 20px;
-  padding-right: 0;
+    padding: 20px;
+    padding-right: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 .post-title {
-  font-size: 30px;
-  color: rgb(71, 40, 40);
+    font-size: 30px;
+    color: rgb(71, 40, 40);
 }
 
 .single-post-img {
-  width: 100%;
-  height: 300px;
-  border-radius: 5px;
-  object-fit: cover;
+    width: 100%;
+    height: 300px;
+    border-radius: 5px;
+    object-fit: cover;
 }
 
 .single-post-title {
-  text-align: center;
-  margin: 10px;
-  font-family: "Lora", serif;
-  font-size: 28px;
+    text-align: center;
+    margin: 10px;
+    font-family: "Lora", serif;
+    font-size: 28px;
+}
+
+.single-post-title-input {
+    text-align: center;
+    margin: 10px;
+    font-family: "Lora", serif;
+    font-size: 28px;
+    border: none;
+    border-bottom: 1px solid lightgray;
+    color: gray;
+}
+
+.single-post-title-input:focus {
+    outline: none;
 }
 
 .single-post-edit {
-  float: right;
-  font-size: 16px;
+    float: right;
+    font-size: 16px;
 }
+
 .single-post-icon {
-  margin-left: 10px;
-  cursor: pointer;
+    margin-left: 10px;
+    cursor: pointer;
 }
 
 .single-post-icon:first-child {
-  color: teal;
+    color: teal;
 }
 
 .single-post-icon:last-child {
-  color: tomato;
+    color: tomato;
 }
 
 .single-post-info {
-  margin-bottom: 20px;
-  display: flex;
-  justify-content: space-between;
-  font-size: 16px;
-  font-family: "Varela Round", "sans-serif";
-  color: #b39656;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: space-between;
+    font-size: 16px;
+    font-family: "Varela Round", "sans-serif";
+    color: #b39656;
 }
 
 .single-post-desc {
-  color: #666;
-  font-size: 18px;
-  line-height: 25px;
+    color: #666;
+    font-size: 18px;
+    line-height: 25px;
 }
 
 .single-post-desc::first-letter {
-  margin-left: 20px;
-  font-size: 30px;
-  font-weight: 600;
+    margin-left: 20px;
+    font-size: 30px;
+    font-weight: 600;
+}
+
+.single-post-desc-input {
+    border: none;
+    color: #666;
+    font-size: 18px;
+    line-height: 25px;
+}
+
+.single-post-desc-input:focus {
+    outline: none;
+}
+
+.singlePostButton {
+    width: 100px;
+    border: none;
+    background-color: teal;
+    padding: 5px;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    align-self: flex-end;
+    margin-top: 20px;
 }
