--- a/frontend/src/components/header/Header.css
+++ b/frontend/src/components/header/Header.css
@@ -1,30 +1,32 @@
 .header {
-  margin-top: 60px;
+    margin-top: 60px;
 }
 
 .headerImg {
-  width: 100%;
-  height: 450px;
-  margin-top: 80px;
-  object-fit: cover;
+    width: 100%;
+    height: 450px;
+    margin-top: 80px;
+    object-fit: cover;
 }
 
 .headerTitle {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-family: "Roboto", sans-serif;
-  color: #444;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: "Roboto", sans-serif;
+    color: #444;
 }
 
 .headerTitleSm {
-  position: absolute;
-  top: 18%;
-  font-size: 20px;
+    position: absolute;
+    top: 10%;
+    font-size: 20px;
+    color: rgb(8, 114, 22);
 }
 
 .headerTitleLg {
-  position: absolute;
-  top: 22%;
-  font-size: 100px;
+    position: absolute;
+    top: 13%;
+    font-size: 100px;
+    color: rgb(139, 18, 64);
 }
