--- a/frontend/src/components/singlePost/SinglePost.css
+++ b/frontend/src/components/singlePost/SinglePost.css
@@ -18,7 +18,8 @@
     width: 100%;
     height: 300px;
     border-radius: 5px;
-    object-fit: cover;
+    /* object-fit: cover; */
+    object-fit: contain;
 }
 
 .single-post-title {
