--- a/frontend/src/components/topbar/Topbar.css
+++ b/frontend/src/components/topbar/Topbar.css
@@ -1,64 +1,72 @@
 .topbar {
-  width: 100%;
-  height: 50px;
-  background: rgb(99, 21, 21);
-  color: white;
-  position: sticky;
-  top: 0;
-  display: flex;
-  align-items: center;
-  z-index: 999;
+    width: 100%;
+    height: 50px;
+    background: rgb(99, 21, 21);
+    color: white;
+    position: sticky;
+    top: 0;
+    display: flex;
+    align-items: center;
+    z-index: 999;
 }
 
 .social_icons {
-  flex: 3;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    flex: 3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .icon {
-  margin-right: 15px;
-  font-size: 20px;
-  cursor: pointer;
+    margin-right: 15px;
+    font-size: 20px;
+    cursor: pointer;
 }
 
 .nav_items {
-  flex: 6;
+    flex: 6;
 }
 
 .top_list {
-  display: flex;
-  justify-content: space-around;
-  text-transform: uppercase;
+    display: flex;
+    justify-content: space-around;
+    text-transform: uppercase;
 }
 
 .top_list_item {
-  list-style: none;
-  font-size: 18px;
-  cursor: pointer;
+    list-style: none;
+    font-size: 18px;
+    cursor: pointer;
 }
 
 .profile {
-  flex: 3;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    flex: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .profile_image {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  margin-right: 20px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 20px;
+    cursor: pointer;
 }
 
 .search_icon {
-  font-size: 20px;
-  cursor: pointer;
+    font-size: 20px;
+    cursor: pointer;
 }
 
 .link {
-  text-decoration: none;
-  color: inherit;
+    text-decoration: none;
+    color: inherit;
+}
+
+.topSearchIcon {
+    font-size: 18px;
+    color: #666;
+    cursor: pointer;
+    margin-left: 15px;
 }
