--- a/frontend/src/components/writePost/WritePost.css
+++ b/frontend/src/components/writePost/WritePost.css
@@ -1,57 +1,64 @@
 .write-post {
-  padding: 50px;
+    padding: 50px;
 }
+
 .write-img {
-  margin-left: 150px;
-  width: 70vw;
-  height: 250px;
-  border-radius: 10px;
-  object-fit: cover;
+    margin-left: 150px;
+    width: 70vw;
+    height: 250px;
+    border-radius: 10px;
+    /* object-fit: cover; */
+    object-fit: contain;
 }
+
 .write-form {
-  position: relative;
+    position: relative;
 }
+
 .write-form-group {
-  margin-left: 150px;
-  display: flex;
-  align-items: center;
+    margin-left: 150px;
+    display: flex;
+    align-items: center;
 }
+
 .write-icon {
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  border: 1px solid;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 20px;
-  color: rgb(121, 118, 118);
-  cursor: pointer;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    border: 1px solid;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    color: rgb(121, 118, 118);
+    cursor: pointer;
 }
 
 .write-input {
-  font-size: 30px;
-  border: none;
-  padding: 20px;
-  width: 70vh;
+    font-size: 30px;
+    border: none;
+    padding: 20px;
+    width: 70vh;
 }
+
 .write-input:focus {
-  outline: none;
+    outline: none;
 }
+
 .write-text {
-  font-size: 20px;
-  height: 100vh;
+    font-size: 20px;
+    height: 100vh;
 }
 
 .write-submit {
-  position: absolute;
-  top: 20px;
-  right: 50px;
-  color: white;
-  background-color: teal;
-  padding: 10px;
-  border: none;
-  border-radius: 10px;
-  cursor: pointer;
-  font-size: 16px;
+    position: absolute;
+    top: 20px;
+    right: 50px;
+    color: white;
+    background-color: teal;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 16px;
 }
